--- a/.github/workflows/test-pr-action-2.yml
+++ b/.github/workflows/test-pr-action-2.yml
@@ -69,7 +69,8 @@ jobs:
         id: changed_files
         run: |
           # gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | jq -r '.[].filename | join(", ")'
-          mapfile -t changed_files < <(gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | jq -r '.[].filename) | join(", ")')
+          # [] = give separate output for each
+          mapfile -t changed_files < <(gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | jq -r '.[].filename') )
           # gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files"
           # changed_files_output=$(gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files")
           # echo "$changed_files_output" > test-json-output.txt 
@@ -80,7 +81,7 @@ jobs:
           # mapfile -t changed_files < <(gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | jq -r 'map(.filename) | join(", ")')
           # echo "Printing changed file list:"
           # echo "${changed_files}"
-          # printf "%s\\n" "${changed_files[@]}"
+          printf "%s\\n" "${changed_files[@]}"
 
           # echo "CHANGED_FILES=${changed_files}" >> $GITHUB_ENV
           # echo "CHANGED_FILES=${changed_files}" >> $GITHUB_OUTPUT
