--- a/.github/workflows/test-pr-action-2.yml
+++ b/.github/workflows/test-pr-action-2.yml
@@ -63,13 +63,13 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
       
       # TODO: LOOK UP AND EXPLAIN JQ MAP
-      # TODO: EXPLAIN HOW YOU WERE ABLE TO WRITE TO JSONOUTPUT FILE
+      # TODO: EXPLAIN HOW YOU WERE ABLE TO WRITE TO JSONOUTPUT FILE, MOVE IT TO OTHER ACTION OR MAKE CONDITIONAL STEP
       # jq map will filter out TBD
       - name: Get List of Changed Files
         id: changed_files
         run: |
           # [] = give separate output for each
-          mapfile -t changed_files < <(gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | jq -r '.[].filename')
+          mapfile -t changed_files < <(gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | jq -r '.[].filename') 
           # gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files"
           # changed_files_output=$(gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files")
           # echo "$changed_files_output" > test-json-output.txt 
@@ -77,19 +77,17 @@ jobs:
           # git commit -m "Capture output from Github 'get changed files' call"
           # git push origin main
           
-          # mapfile -t changed_files < <(gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | jq -r 'map(.filename) | join(", ")')
-          # echo "Printing changed file list:"
-          # echo "${changed_files}"
+          echo "Printing changed file list:"
           printf "%s\\n" "${changed_files[@]}"
 
-          # echo "CHANGED_FILES=${changed_files}" >> $GITHUB_ENV
+          echo "CHANGED_FILES=${changed_files}" >> $GITHUB_ENV
           # echo "CHANGED_FILES=${changed_files}" >> $GITHUB_OUTPUT
       
       - name: Print CHANGED_FILES
         run: |
           echo "Attempt to print env.CHANGED_FILES..."
-          # changed_files=${{env.CHANGED_FILES}}
-          changed_files=${{ steps.changed_files.outputs.CHANGED_FILES }}
+          changed_files=${{env.CHANGED_FILES}}
+          # changed_files=${{ steps.changed_files.outputs.CHANGED_FILES }}
           printf "%s\\n" "${changed_files[@]}"
           echo "changed_files[0] = ${changed_files[0]}"
           echo "changed_files[1] = ${changed_files[1]}"
