--- a/.github/workflows/test-pr-action-2.yml
+++ b/.github/workflows/test-pr-action-2.yml
@@ -70,6 +70,7 @@ jobs:
         run: |
           # [] = give separate output for each
           mapfile -t changed_files < <(gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | jq -r '.[].filename') 
+          
           # gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files"
           # changed_files_output=$(gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files")
           # echo "$changed_files_output" > test-json-output.txt 
@@ -79,8 +80,12 @@ jobs:
           
           echo "Printing changed file list:"
           printf "%s\\n" "${changed_files[@]}"
-
-          echo "CHANGED_FILES=${changed_files_output}" >> $GITHUB_ENV
+          # Env vars can only be strings, so convert the array into strings
+          #TODO: LOOKUP AND EXPLAIN IFS, [*]
+          IFS=', '
+          changed_files_str="${changed_files[*]}"
+          echo "changed_files_str = ${changed_files_str}"
+          echo "CHANGED_FILES=${changed_files}" >> $GITHUB_ENV
           # echo "CHANGED_FILES=${changed_files}" >> $GITHUB_OUTPUT
       
       - name: Print CHANGED_FILES
