--- a/.github/workflows/test-pr-action-2.yml
+++ b/.github/workflows/test-pr-action-2.yml
@@ -65,7 +65,7 @@ jobs:
       # TODO: LOOK UP AND EXPLAIN JQ MAP
       # TODO: EXPLAIN HOW YOU WERE ABLE TO WRITE TO JSONOUTPUT FILE, MOVE IT TO OTHER ACTION OR MAKE CONDITIONAL STEP
       # jq map will filter out TBD
-      - name: Get List of Changed Files
+      - name: Get List of Changed Files, set as str
         id: changed_files
         run: |
           # [] = give separate output for each
@@ -88,12 +88,14 @@ jobs:
           echo "CHANGED_FILES_STR=${changed_files_str}" >> $GITHUB_ENV
           # echo "CHANGED_FILES=${changed_files}" >> $GITHUB_OUTPUT
       
-      - name: Print CHANGED_FILES
+      - name: changed files str --> Array
         run: |
-          echo "Attempt to print env.CHANGED_FILES..."
-          # changed_files=${{env.CHANGED_FILES_STR}}
+          echo "Attempt to print env.CHANGED_FILES_STR..."
           echo "${{env.CHANGED_FILES_STR}}"
-          # changed_files=${{ steps.changed_files.outputs.CHANGED_FILES }}
+          # Join it back to an array
+          IFS=", "
+          changed_files_array=(${{env.CHANGED_FILES_STR}})
+          echo "changed_files_array[1] = ${changed_files_array[1]}"
           # printf "%s\\n" "${changed_files[@]}"
           # echo "changed_files[0] = ${changed_files[0]}"
           # echo "changed_files[1] = ${changed_files[1]}"
